# pandoc-graphql

./: .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: build.rs  citation.rs  document.rs  lib.rs  main.rs  pandoc.rs  schema.rs  source.rs
test/content/: index.yaml  references.bib
test/content/citations/: build.yaml  content.md
test/content/commonmark/: build.yaml  content.md
test/content/jupyter/: build.yaml  content.ipynb
test/content/jupyter-pandoc/: build.yaml  content.ipynb
test/content/markdown/: build.yaml  content.md  hello-world.md
test/content/markdown-pandoc/: build.yaml  content.md  hello-world.md
